examples/openid-connect/newoidc/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    custom.nginx.org/oidc:  "on"
    #custom.nginx.org/keyval-zone-size: "1m"           # (default 1m)
    #custom.nginx.org/refresh-token-timeout: "8h"      # (default 8h)
    #custom.nginx.org/session-token-timeout: "1h"      # (default 1h)
    #custom.nginx.org/oidc-resolver-address: "8.8.8.8" # (default 8.8.8.8)
    custom.nginx.org/oidc-jwt-keyfile: "https://login.microsoftonline.com/dd3dfd2f-6a3b-40d1-9be0-bf8327d81c50/discovery/v2.0/keys"
    custom.nginx.org/oidc-logout-redirect: "https://login.microsoftonline.com/dd3dfd2f-6a3b-40d1-9be0-bf8327d81c50/oauth2/v2.0/logout"
    custom.nginx.org/oidc-authz-endpoint: "https://login.microsoftonline.com/dd3dfd2f-6a3b-40d1-9be0-bf8327d81c50/oauth2/v2.0/authorize"
    custom.nginx.org/oidc-token-endpoint: "https://login.microsoftonline.com/dd3dfd2f-6a3b-40d1-9be0-bf8327d81c50/oauth2/v2.0/token"
    custom.nginx.org/oidc-client:  "f66df7b0-7378-489a-a98d-2c166c157843"
    custom.nginx.org/oidc-client-secret: "__0H8HqpmhkI6DL-zG3KXjm5.YvZ8ZuxW4"
    custom.nginx.org/oidc-hmac-key:  "vC5FabzvYvFZFBzxtRCYDYX+"
    nginx.org/location-snippets: |
      proxy_set_header username $jwt_claim_sub;
      proxy_set_header jwt-email $jwt_claim_email;
      proxy_set_header jwt-username $jwt_claim_preferred_username;
      proxy_set_header jwt-name $jwt_claim_name;
      proxy_set_header jwt-aud $jwt_claim_aud;
      proxy_set_header jwt-azp $jwt_claim_azp;
      proxy_set_header jwt-email-verified $jwt_claim_email_verified;
      proxy_set_header jwt-firstname $jwt_claim_given_name;
      proxy_set_header jwt-lastname $jwt_claim_family_name;
      proxy_set_header jwt-acr $jwt_claim_acr;
      proxy_set_header jwt-typ $jwt_claim_typ;
      proxy_set_header jwt-nibr521 $jwt_nibr521; # custom map in nginx-config.yaml for this
spec:
  tls:
  - hosts:
    - cafe.nginx.net
    secretName: cafe-secret
  rules:
  - host: cafe.nginx.net
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
